--- a/bicosthe-front/feed.html
+++ b/bicosthe-front/feed.html
@@ -1,90 +1,339 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feed de Bicos</title>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
-    h1 { text-align: center; }
-    .filtros { margin-bottom: 20px; display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
-    .bico { background: white; padding: 15px; margin: 10px 0; border-radius: 8px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
-    .botao-novo { background-color: #28a745; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; text-decoration: none; }
-    .botao-novo:hover { background-color: #218838; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Feed de Bicos - Bicosthe</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <style>
+        /* Estilos básicos para visualização (mantidos do exemplo anterior) */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            gap: 20px;
+        }
+        .filters {
+            flex: 0 0 250px; /* Largura fixa para os filtros */
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            height: fit-content; /* Ajusta a altura ao conteúdo */
+            position: sticky; /* Mantém os filtros visíveis ao rolar */
+            top: 20px; /* Distância do topo */
+        }
+        .filters h3 {
+            margin-top: 0;
+            color: #555;
+        }
+        .filter-group {
+            margin-bottom: 15px;
+        }
+        .filter-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .filter-group select,
+        .filter-group input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .filter-group button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+        .filter-group button:hover {
+            background-color: #0056b3;
+        }
+
+        .bicos-list {
+            flex-grow: 1;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+        }
+        .bico-card {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-left: 5px solid #28a745;
+        }
+        .bico-card h4 {
+            margin-top: 0;
+            color: #007bff;
+        }
+        .bico-card p {
+            margin: 5px 0;
+            font-size: 0.9em;
+        }
+        .bico-card .price {
+            font-weight: bold;
+            color: #28a745;
+            font-size: 1.1em;
+            margin-top: 10px;
+        }
+        .bico-card .location, .bico-card .category {
+            font-size: 0.85em;
+            color: #666;
+        }
+        .loading-message {
+            grid-column: 1 / -1; /* Ocupa todas as colunas */
+            text-align: center;
+            padding: 20px;
+            font-size: 1.2em;
+            color: #888;
+        }
+        .filter-select.loading {
+            background-color: #f0f0f0;
+            color: #a0a0a0;
+            font-style: italic;
+        }
+    </style>
 </head>
 <body>
-  <h1>Feed de Bicos</h1>
+    <div class="container">
+        <aside class="filters">
+            <h3>Filtrar Bicos</h3>
+            <div class="filter-group">
+                <label for="zona">Zona:</label>
+                <select id="zona" class="filter-select loading" disabled>
+                    <option value="">Carregando Zonas...</option>
+                </select>
+            </div>
 
-  <div class="filtros">
-    <select id="regiaoFiltro">
-      <option value="">Todas as Zonas</option>
-      <option value="1">Zona Norte</option>
-      <option value="2">Zona Sul</option>
-      <option value="3">Zona Leste</option>
-      <option value="4">Zona Oeste</option>
-      <option value="5">Centro</option>
-      <option value="6">Rural</option>
-    </select>
-    <input type="text" id="categoriaFiltro" placeholder="Categoria / Título">
-    <input type="text" id="bairroFiltro" placeholder="Bairro (Opcional se estiver em idregiao)">
-    <input type="number" id="valorMaxFiltro" placeholder="Valor máximo">
-    <button onclick="carregarFeed()">Filtrar</button>
-    <a href="novo-bico.html" class="botao-novo">+ Novo Bico</a>
-  </div>
+            <div class="filter-group">
+                <label for="bairro">Bairro:</label>
+                <select id="bairro" class="filter-select loading" disabled>
+                    <option value="">Carregando Bairros...</option>
+                </select>
+            </div>
 
-  <div id="feed"></div>
+            <div class="filter-group">
+                <label for="categoria">Categoria:</label>
+                <select id="categoria" class="filter-select loading" disabled>
+                    <option value="">Carregando Categorias...</option>
+                </select>
+            </div>
 
-  <script>
-    async function carregarFeed() {
-      try {
-        const response = await axios.get('http://localhost:5000/bicos');
-        const bicos = response.data;
+            <div class="filter-group">
+                <label for="valor-min">Valor Mínimo:</label>
+                <input type="number" id="valor-min" min="0" value="0">
+            </div>
 
-        const regiao = document.getElementById('regiaoFiltro').value;
-        const categoria = document.getElementById('categoriaFiltro').value.toLowerCase();
-        const bairro = document.getElementById('bairroFiltro').value.toLowerCase();
-        const valorMax = parseFloat(document.getElementById('valorMaxFiltro').value);
+            <div class="filter-group">
+                <label for="valor-max">Valor Máximo:</label>
+                <input type="number" id="valor-max" min="0" value="1000">
+            </div>
+            
+            <div class="filter-group">
+                <button id="apply-filters">Aplicar Filtros</button>
+            </div>
+        </aside>
 
-        const filtrado = bicos.filter(bico => {
-          if (regiao && bico.idregiao != regiao) return false;
-          if (categoria && !bico.titulo.toLowerCase().includes(categoria)) return false;
-          if (bairro && !bico.descricao.toLowerCase().includes(bairro)) return false;
-          if (!isNaN(valorMax) && parseFloat(bico.valor) > valorMax) return false;
-          return true;
+        <main class="bicos-list" id="bicosList">
+            <div class="loading-message" id="loadingMessage">Carregando bicos...</div>
+            </main>
+    </div>
+
+    <script>
+        const API_BASE_URL = 'http://localhost:5000'; // Sua API rodando localmente
+
+        const bicosListDiv = document.getElementById('bicosList');
+        const zonaSelect = document.getElementById('zona');
+        const bairroSelect = document.getElementById('bairro');
+        const categoriaSelect = document.getElementById('categoria');
+        const valorMinInput = document.getElementById('valor-min');
+        const valorMaxInput = document.getElementById('valor-max');
+        const applyFiltersButton = document.getElementById('apply-filters');
+        const loadingMessage = document.getElementById('loadingMessage');
+
+        let allBairros = []; // Para armazenar todos os bairros e filtrar por zona
+
+        // --- Funções de Ajuda ---
+        function formatCurrency(value) {
+            return parseFloat(value).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+        }
+
+        function renderBicos(bicos) {
+            bicosListDiv.innerHTML = ''; 
+
+            if (bicos.length === 0) {
+                bicosListDiv.innerHTML = '<div class="loading-message">Nenhum bico encontrado com os filtros aplicados.</div>';
+                return;
+            }
+
+            bicos.forEach(bico => {
+                const bicoCard = document.createElement('div');
+                bicoCard.className = 'bico-card';
+
+                const bairroNome = bico.bairro_nome || 'Não informado'; 
+                const zonaNome = bico.zona_nome || 'Não informada'; 
+                const categoriasNomes = bico.categorias && bico.categorias.length > 0
+                    ? bico.categorias.map(cat => cat.nome).join(', ') 
+                    : 'Não informada';
+
+                bicoCard.innerHTML = `
+                    <h4>${bico.titulo}</h4>
+                    <p>${bico.descricao}</p>
+                    <p class="location">Bairro: ${bairroNome}, Zona: ${zonaNome}</p>
+                    <p class="category">Categoria: ${categoriasNomes}</p>
+                    <p class="price">${formatCurrency(bico.valor)}</p>
+                `;
+                bicosListDiv.appendChild(bicoCard);
+            });
+        }
+
+        // --- Funções para Carregar Filtros Independentemente ---
+
+        async function populateZonas() {
+            zonaSelect.innerHTML = '<option value="">Carregando Zonas...</option>';
+            zonaSelect.classList.add('loading');
+            zonaSelect.disabled = true;
+
+            try {
+                const response = await axios.get(`${API_BASE_URL}/zonas`);
+                zonaSelect.innerHTML = '<option value="">Todas as Zonas</option>';
+                response.data.forEach(zona => {
+                    const option = document.createElement('option');
+                    option.value = zona.idzona;
+                    option.textContent = zona.zona.charAt(0).toUpperCase() + zona.zona.slice(1);
+                    zonaSelect.appendChild(option);
+                });
+            } catch (error) {
+                console.error('Erro ao carregar Zonas:', error.response ? error.response.data : error.message);
+                zonaSelect.innerHTML = '<option value="">Erro ao carregar Zonas</option>';
+                // Mesmo com erro, pode ser útil tentar carregar novamente ou dar feedback
+            } finally {
+                zonaSelect.classList.remove('loading');
+                zonaSelect.disabled = false;
+            }
+        }
+
+        async function populateBairros() {
+            bairroSelect.innerHTML = '<option value="">Carregando Bairros...</option>';
+            bairroSelect.classList.add('loading');
+            bairroSelect.disabled = true;
+
+            try {
+                const response = await axios.get(`${API_BASE_URL}/bairros`);
+                allBairros = response.data; // Armazena todos os bairros
+                populateBairrosSelect(allBairros); // Popula o select com todos
+            } catch (error) {
+                console.error('Erro ao carregar Bairros:', error.response ? error.response.data : error.message);
+                bairroSelect.innerHTML = '<option value="">Erro ao carregar Bairros</option>';
+            } finally {
+                bairroSelect.classList.remove('loading');
+                bairroSelect.disabled = false;
+            }
+        }
+
+        function populateBairrosSelect(bairrosToDisplay) {
+            bairroSelect.innerHTML = '<option value="">Todos os Bairros</option>';
+            bairrosToDisplay.forEach(bairro => {
+                const option = document.createElement('option');
+                option.value = bairro.idbairro; 
+                option.textContent = bairro.bairro;
+                bairroSelect.appendChild(option);
+            });
+        }
+
+        async function populateCategorias() {
+            categoriaSelect.innerHTML = '<option value="">Carregando Categorias...</option>';
+            categoriaSelect.classList.add('loading');
+            categoriaSelect.disabled = true;
+
+            try {
+                const response = await axios.get(`${API_BASE_URL}/categories`);
+                categoriaSelect.innerHTML = '<option value="">Todas as Categorias</option>';
+                response.data.forEach(categoria => {
+                    const option = document.createElement('option');
+                    option.value = categoria.idcategoria; 
+                    option.textContent = categoria.nome;
+                    categoriaSelect.appendChild(option);
+                });
+            } catch (error) {
+                console.error('Erro ao carregar Categorias:', error.response ? error.response.data : error.message);
+                categoriaSelect.innerHTML = '<option value="">Erro ao carregar Categorias</option>';
+            } finally {
+                categoriaSelect.classList.remove('loading');
+                categoriaSelect.disabled = false;
+            }
+        }
+
+        // Função principal para buscar bicos (mantida)
+        async function fetchBicos() {
+            loadingMessage.style.display = 'block'; 
+            bicosListDiv.innerHTML = ''; 
+
+            const params = {
+                zona: zonaSelect.value,
+                bairro: bairroSelect.value,
+                categoria: categoriaSelect.value,
+                valorMin: valorMinInput.value,
+                valorMax: valorMaxInput.value
+            };
+
+            Object.keys(params).forEach(key => {
+                if (params[key] === '' || params[key] === null || params[key] === undefined) {
+                    delete params[key];
+                }
+            });
+
+            try {
+                console.log('Buscando bicos com os seguintes parâmetros:', params);
+                const response = await axios.get(`${API_BASE_URL}/bicos`, { params });
+                renderBicos(response.data);
+            } catch (error) {
+                console.error('Erro ao buscar bicos:', error.response ? error.response.data : error.message);
+                bicosListDiv.innerHTML = '<div class="loading-message" style="color: red;">Erro ao carregar os bicos. Tente novamente.</div>';
+            } finally {
+                loadingMessage.style.display = 'none'; 
+            }
+        }
+
+        // --- Event Listeners e Inicialização ---
+        applyFiltersButton.addEventListener('click', fetchBicos);
+
+        zonaSelect.addEventListener('change', () => {
+            const selectedZonaId = zonaSelect.value;
+            let filteredBairros = allBairros;
+
+            if (selectedZonaId) {
+                filteredBairros = allBairros.filter(bairro => String(bairro.idzona) === selectedZonaId);
+            }
+            populateBairrosSelect(filteredBairros);
+            fetchBicos(); // Dispara nova busca de bicos ao mudar a zona
         });
 
-        mostrarFeed(filtrado);
-      } catch (error) {
-        console.error('Erro ao carregar feed:', error);
-      }
-    }
+        // Carregar TUDO ao carregar a página
+        document.addEventListener('DOMContentLoaded', async () => {
+            // Carrega os filtros independentemente
+            await populateZonas();
+            await populateBairros();
+            await populateCategorias();
 
-    function mostrarFeed(bicos) {
-      const feed = document.getElementById('feed');
-      feed.innerHTML = '';
-      if (bicos.length === 0) {
-        feed.innerHTML = '<p>Nenhum bico encontrado com os filtros selecionados.</p>';
-        return;
-      }
-
-      bicos.forEach(bico => {
-        const card = document.createElement('div');
-        card.className = 'bico';
-        card.innerHTML = `
-          <h3>${bico.titulo}</h3>
-          <p><strong>Descrição:</strong> ${bico.descricao}</p>
-          <p><strong>Valor:</strong> R$ ${parseFloat(bico.valor).toFixed(2)}</p>
-          <p><strong>Início:</strong> ${new Date(bico.dataInicio).toLocaleString()}</p>
-          <p><strong>Fim:</strong> ${new Date(bico.dataFim).toLocaleString()}</p>
-          <p><strong>Região:</strong> ${bico.idregiao}</p>
-        `;
-        feed.appendChild(card);
-      });
-    }
-
-    window.onload = carregarFeed;
-  </script>
+            // Carrega os bicos iniciais (sem filtros aplicados inicialmente)
+            fetchBicos(); 
+        });
+    </script>
 </body>
 </html>
