api: criando query sql dinamica para aceitar filtragens

--- a/bicosthe-front/feed.html
+++ b/bicosthe-front/feed.html
@@ -321,7 +321,7 @@
                 filteredBairros = allBairros.filter(bairro => String(bairro.idzona) === selectedZonaId);
             }
             populateBairrosSelect(filteredBairros);
-            fetchBicos(); // Dispara nova busca de bicos ao mudar a zona
+            //fetchBicos(); // Dispara nova busca de bicos ao mudar a zona
         });
 
         // Carregar TUDO ao carregar a página
