--- a/bicosthe-front/src/index.html
+++ b/bicosthe-front/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'feed.html'
+        window.location.href = "pages/feed/feed.html";
     </script>
 </body>
 </html>
