front: criação de menu em todas a paginas

--- a/bicosthe-front/src/pages/feed/feed.html
+++ b/bicosthe-front/src/pages/feed/feed.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed de Bicos - Bicosthe</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../../components/menu/menu.js"></script>
     <link rel="stylesheet" href="feed.css">
     <script src="feed.js" defer></script>
 </head>
