--- a/bicosthe-front/src/pages/login/login.html
+++ b/bicosthe-front/src/pages/login/login.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet" href="login.css">
+  <script src="../../components/menu/menu.js"></script>
+  <script src="login.js" defer></script>
 </head>
 <body>
   <h1>Login</h1>
@@ -21,39 +24,5 @@
   </form>
 
   <div id="resposta" style="margin-top: 20px; font-weight: bold;"></div>
-
-  <script>
-    document.getElementById('loginForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-
-      const form = e.target;
-      const email = form.email.value.trim();
-      const senha = form.senha.value;
-
-      try {
-        const response = await axios.post('http://localhost:5000/signin', {
-          email,
-          senha
-        });
-
-        const { token, idsession, idusuario } = response.data;
-
-        // Salva no localStorage
-        localStorage.setItem('token', token);
-        localStorage.setItem('idsession', idsession);
-        localStorage.setItem('idusuario', idusuario)
-
-        document.getElementById('resposta').innerText = '✅ Login realizado com sucesso!';
-
-        // Redirecionar para a página principal (opcional)
-        // window.location.href = 'pagina-principal.html';
-
-      } catch (error) {
-        console.error(error);
-        const mensagem = error.response?.data?.message || 'Erro ao fazer login.';
-        document.getElementById('resposta').innerText = '❌ ' + mensagem;
-      }
-    });
-  </script>
 </body>
 </html>
