--- a/bicosthe-front/src/pages/novo-bico/novo-bico.html
+++ b/bicosthe-front/src/pages/novo-bico/novo-bico.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Cadastro de Serviço</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
+   <script src="../../components/menu/menu.js"></script>
   <link rel="stylesheet" href="cadastro-servico.css">
   <script src="cadastro-servico.js" defer></script>
 </head>
